# Autonumerics

./: .gitignore  Benchmark-200.py  README.md  pyproject.toml
app/: __init__.py  run_benchmark.py  run_convergence.py  run_single_problem.py
outputs_new_paper/run_advection_2d_periodic_sin_2026-02-09_15-34-52/: evaluated_plans.json  final_decision.json  pde_spec.json  plans_scored.json  run_metadata.json  theoretical_justification.txt
outputs_new_paper/run_allen_cahn_1d_stationary_tanh_2026-02-09_18-46-13/: evaluated_plans.json  final_decision.json  pde_spec.json  plans_scored.json  run_metadata.json  theoretical_justification.txt
outputs_new_paper/run_biharmonic_2d_dirichlet_sin_sin_2026-02-09_21-18-47/: evaluated_plans.json  final_decision.json  pde_spec.json  plans_scored.json  run_metadata.json  theoretical_justification.txt
outputs_new_paper/run_burgers_1d_viscous_periodic_2026-02-10_22-26-08/: evaluated_plans.json  final_decision.json  pde_spec.json  plans_scored.json  run_metadata.json  theoretical_justification.txt
outputs_new_paper/run_burgers_inviscid_1d_periodic_implicit_2026-02-11_00-49-10/: evaluated_plans.json  final_decision.json  pde_spec.json  plans_scored.json  run_metadata.json  (+1 more)
scripts/: __init__.py  convert_text_to_problem.py
src/: __init__.py  analytic_utils.py  coder_agent.py  critic_agent.py  evaluator.py  feature_agent.py  formulator.py  llm_utils.py  plan_selector.py  planner_agent.py  problem_lists_0125.py  reasoning_agent.py  sde_analytic_utils.py  sde_coder_agent.py  sde_planner_agent.py  sde_problem_list.py
(+496 files in other folders)
