[project]
name = "auto-demo"
version = "0.1.0"
description = "Auto-demo pipeline for LLM-driven PDE problem solving."
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.9.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["outputs_new_paper"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM"]
ignore = ["E402", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
